--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@material-ui/core": "^4.4.0",
     "@material-ui/icons": "^4.4.3",
     "axios": "^1.6.2",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-lottie": "^1.2.3",
